--- a/LazyStack.Components/Components/DevTools/DevConnect.razor
+++ b/LazyStack.Components/Components/DevTools/DevConnect.razor
@@ -1,4 +1,4 @@
-﻿@*@namespace LazyStack.Components
+﻿@namespace LazyStack.Components
 @inherits CoreComponentBase<DevConnectViewModel>
 
 <h3>Connection Options</h3>
@@ -30,4 +30,3 @@
     // - We only change the values in memory (there is never a write)
     // - No other view model needs to observe this change.
 }
-*@
