--- a/LazyStack.Components/_Imports.razor
+++ b/LazyStack.Components/_Imports.razor
@@ -1,13 +1,18 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Reactive.Threading.Tasks
+
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using LazyStackAuthV2
-@using System.Reactive.Threading.Tasks
+
 @using ReactiveUI.Blazor
+
+@using Blazorise
+@using Blazorise.Components
+
+@using LazyStackAuthV2
 @using LazyStack.Utils
 @using LazyStack.ViewModels
-@using Blazorise
 
