--- a/LazyStack.Components/Components/DevTools/DevConnect.razor
+++ b/LazyStack.Components/Components/DevTools/DevConnect.razor
@@ -1,39 +1,45 @@
 ﻿@namespace LazyStack.Components
 @inherits CoreComponentBase<DevConnectViewModel>
 
-<h3>Connection Options</h3>
-<Field>
-    <FieldLabel>API</FieldLabel>
-    <Select TValue="string"
-        @bind-SelectedValue="@ViewModel!.RunConfig.Apis">
-        @foreach (var item in ViewModel.RunConfig.AllowedApis)
-        {
-            <SelectItem Value="@item">@item</SelectItem>
-        }
-    </Select>
-</Field>
+<Card Margin="Margin.Is1">
 
-<Field>
-    <FieldLabel>Assets</FieldLabel>
-    <Select TValue="string"
-        @bind-SelectedValue="@ViewModel!.RunConfig.Assets">
-        @foreach (var item in ViewModel.RunConfig.AllowedAssets)
-        {
-            <SelectItem Value="@item">@item</SelectItem>
-        }
-    </Select>
-</Field>
+        <CardHeader>Connection Options</CardHeader>
+        <CardBody>
+            <Field>
+                <FieldLabel>API</FieldLabel>
+                <Select TValue="string"
+                    @bind-SelectedValue="@ViewModel!.RunConfig.Apis">
+                    @foreach (var item in ViewModel.RunConfig.AllowedApis)
+                    {
+                        <SelectItem Value="@item">@item</SelectItem>
+                    }
+                </Select>
+            </Field>
 
-<Field>
-    <FieldLabel>Tenant</FieldLabel>
-    <Select TValue="string"
-        @bind-SelectedValue="@ViewModel!.RunConfig.Tenant">
-        @foreach(var item in ViewModel.Tenants)
-        {
-            <SelectItem Value="@item.Key">@item.Key</SelectItem>
-        }
-    </Select>
-</Field>
+            <Field>
+                <FieldLabel>Assets</FieldLabel>
+                <Select TValue="string"
+                    @bind-SelectedValue="@ViewModel!.RunConfig.Assets">
+                    @foreach (var item in ViewModel.RunConfig.AllowedAssets)
+                    {
+                        <SelectItem Value="@item">@item</SelectItem>
+                    }
+                </Select>
+            </Field>
+
+            <Field>
+                <FieldLabel>Tenant</FieldLabel>
+                <Select TValue="string"
+                    @bind-SelectedValue="@ViewModel!.RunConfig.Tenant">
+                    @foreach(var item in ViewModel.Tenants)
+                    {
+                        <SelectItem Value="@item.Key">@item.Key</SelectItem>
+                    }
+                </Select>
+            </Field>
+        </CardBody>
+</Card>
+
 
 @code {
     // Using Direct Binding to Model instance in ViewModel
