--- a/LazyStack.Components/_Imports.razor
+++ b/LazyStack.Components/_Imports.razor
@@ -12,7 +12,7 @@
 @using Blazorise
 @using Blazorise.Components
 
-@using LazyStackAuthV2
+@using LazyStackAuth
 @using LazyStack.Utils
 @using LazyStack.ViewModels
 
