--- a/LazyStack.Components/_Imports.razor
+++ b/LazyStack.Components/_Imports.razor
@@ -6,11 +6,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
 
 @using ReactiveUI.Blazor
-
-@using Blazorise
-@using Blazorise.Components
 
 @using LazyStackAuth
 @using LazyStack.Utils
