--- a/LazyStack.Components/Components/Base/LzAuth.razor
+++ b/LazyStack.Components/Components/Base/LzAuth.razor
@@ -15,7 +15,7 @@
                     <div class="form-group">
                         <label for="login">@Msg("AuthComponent_LoginLabel")</label>
                         <InputText id="login" class="form-control" @bind-Value="ViewModel.Login" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.LoginFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.LoginFormatMessage!)</small>
                     </div>
                 }
                 @if (ViewModel.CurrentChallengeIsNewLogin)
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <label for="login">@Msg("AuthComponent_NewLoginLabel")</label>
                         <InputText id="newlogin" class="form-control" @bind-Value="ViewModel.NewLogin" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewLoginFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewLoginFormatMessage!)</small>
                     </div>
                 }
                 @if (ViewModel.CurrentChallengeIsPassword)
@@ -31,7 +31,7 @@
                     <div class="form-group">
                         <label for="password">@Msg("AuthComponent_PasswordLabel")</label>
                         <InputText id="password" type="password" class="form-control" @bind-Value="ViewModel.Password" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.PasswordFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.PasswordFormatMessage!)</small>
                     </div>
 
                 }
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label for="newpassword">@Msg("AuthComponent_NewPasswordLabel")</label>
                         <InputText id="newpassword" type="password" class="form-control" @bind-Value="ViewModel.NewPassword" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewPasswordFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewPasswordFormatMessage!)</small>
                     </div>
 
                 }
@@ -49,7 +49,7 @@
                     <div class="form-group">
                         <label for="email">@Msg("AuthComponent_EmailLabel")</label>
                         <InputText id="email" class="form-control" @bind-Value="ViewModel.Email" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.EmailFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.EmailFormatMessage!)</small>
                     </div>
 
                 }
@@ -58,7 +58,7 @@
                     <div class="form-group">
                         <label for="newemail">@Msg("AuthComponent_NewEmailLabel")</label>
                         <InputText id="newemail" class="form-control" @bind-Value="ViewModel.NewEmail" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewEmailFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewEmailFormatMessage!)</small>
                     </div>
                 }
                 @if (ViewModel.CurrentChallengeIsPhone)
@@ -66,7 +66,7 @@
                     <div class="form-group">
                         <label for="phone">@Msg("AuthComponent_PhoneLabel")</label>
                         <InputText id="phone" class="form-control" @bind-Value="ViewModel.Phone" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.PhoneFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.PhoneFormatMessage!)</small>
                     </div>
 
                 }
@@ -75,7 +75,7 @@
                     <div class="form-group">
                         <label for="newphone">@Msg("AuthComponent_NewPhoneLabel")</label>
                         <InputText id="newphone" class="form-control" @bind-Value="ViewModel.NewPhone" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewPhoneFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.NewPhoneFormatMessage!)</small>
                     </div>
                 }
                 @if (ViewModel.CurrentChallengeIsCode)
@@ -83,46 +83,46 @@
                     <div class="form-group">
                         <label for="code">@Msg("AuthComponent_CodeLabel")</label>
                         <InputText id="code" class="form-control" @bind-Value="ViewModel.Code" @oninput="OnInput" @onkeydown="VerifyKey" @onfocus="CheckFormatOnFocus" />
-                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.CodeFormatMessage)</small>
+                        <small id="loginHelp" class="form-text text-muted">@Msg(@ViewModel.CodeFormatMessage!)</small>
                     </div>
                 }
             </div>
             <div>
                 @if (ViewModel.CanSignIn)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async() => await ViewModel.StartSignInAsync())">@Msg("AuthComponent_SignIn")</button>
+                    <button  type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async() => await ViewModel.StartSignInAsync())">@Msg("AuthComponent_SignIn")</button>
                 }
                 @if (ViewModel.CanSignUp)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.StartSignUpAsync())">@Msg("AuthComponent_SignUp")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.StartSignUpAsync())">@Msg("AuthComponent_SignUp")</button>
                 }
                 @if (ViewModel.CanResetPassword)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.StartResetPasswordAsync())">@Msg("AuthComponent_ResetPassword")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.StartResetPasswordAsync())">@Msg("AuthComponent_ResetPassword")</button>
                 }
                 @if (ViewModel.CanUpdateEmail)
                 {
-                    <button type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdateEmailAsync())">@Msg("AuthComponent_UpdateEmail")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdateEmailAsync())">@Msg("AuthComponent_UpdateEmail")</button>
                 }
                 @if (ViewModel.CanUpdatePassword)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdatePasswordAsync())">@Msg("AuthComponent_UpdatePassword")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdatePasswordAsync())">@Msg("AuthComponent_UpdatePassword")</button>
                 }
                 @if (ViewModel.CanUpdatePhone)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdatePhoneAsync())">@Msg("AuthComponent_UpdatePhone")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.StartUpdatePhoneAsync())">@Msg("AuthComponent_UpdatePhone")</button>
                 }
                 @if (ViewModel.CanSignOut)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async() => await ViewModel.SignOutAsync())">@Msg("AuthComponent_SignOut")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async() => await ViewModel.SignOutAsync())">@Msg("AuthComponent_SignOut")</button>
                 } 
                 @if (ViewModel.CanResendCode)
                 {
-                    <button  type="button" class="btn btn-secondary" @onclick="@(async()=>await ViewModel.ResendCodeAsync())">@Msg("AuthComponent_ResendCode")</button>
+                    <button type="button" style="@btnstyle" class="lz-btn btn btn-secondary" @onclick="@(async()=>await ViewModel.ResendCodeAsync())">@Msg("AuthComponent_ResendCode")</button>
                 }
                 @if (ViewModel.CanCancel)
                 {
-                    <button margin="5,0,0,5" type="button" class="btn btn-secondary" @onclick="@(async()=>
+                    <button style="@btnstyle" type="button" class="btn btn-secondary" @onclick="@(async()=>
                     { 
                         ViewModel.ClearAllFields = true;
                         await ViewModel.CancelAsync();
@@ -134,7 +134,7 @@
 
                 @if (ViewModel.CanNext)
                 {
-                    <button margin="5,0,0,5" type="button" class="btn btn-secondary" @onclick="@VerifyNoArg">
+                    <button style="@btnstyle" type="button" class="btn btn-secondary" @onclick="@VerifyNoArg">
                         @Msg("AuthComponent_Next")
                     </button>
                 }
@@ -154,6 +154,7 @@
     private bool cancelButtonDisabled = false;
     const KeyboardEventArgs emptyKeyboardEventArgs = null;
     private IJSObjectReference? lzauth;
+    private string btnstyle = "margin: 5px 5px 5px 5px;"; // isolated css not working as expected when wrapped in a Blazorise Component so just hit it with a hammer
 
     protected override async Task OnInitializedAsync()
     {
